Make JEI and REI optional per node; trim build script comments